# bixverse.gpu

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: checkmate_extensions.R  classes.R  extendr-wrappers.R  param_wrappers.R  sc_gpu.R  umap_gpu.R
articles/: gpu_single_cell.html  gpu_single_cell.md  index.html  index.md  parametric_umap.html  parametric_umap.md
man/: assertParametricUmapParams.Rd  assertScCagraParams.Rd  assertScIvfParams.Rd  checkParametricUmapParams.Rd  checkScCagraParams.Rd  checkScIvfParams.Rd  dot-prepare_parametric_umap_params.Rd  find_neighbours_cagra_sc.Rd  find_neighbours_gpu_sc.Rd  parametric_umap.Rd  params_parametric_umap.Rd  params_sc_cagra.Rd  params_sc_ivf.Rd  predict.ParametricUmapModel.Rd  print.ParametricUmapModel.Rd  rs_cagra_gpu_knn.Rd  rs_cagra_knn.Rd  rs_exhaustive_gpu_knn.Rd  rs_ivf_gpu_knn.Rd  rs_parametric_umap.Rd  rs_parametric_umap_predict.Rd
news/: index.html  index.md
reference/: assertParametricUmapParams.html  assertParametricUmapParams.md  assertScCagraParams.html  assertScCagraParams.md  assertScIvfParams.html  assertScIvfParams.md  checkParametricUmapParams.html  checkParametricUmapParams.md  checkScCagraParams.html  checkScCagraParams.md  checkScIvfParams.html  checkScIvfParams.md  dot-prepare_parametric_umap_params.html  dot-prepare_parametric_umap_params.md  find_neighbours_cagra_sc.html  find_neighbours_cagra_sc.md  find_neighbours_gpu_sc.html  find_neighbours_gpu_sc.md  index.html  index.md  parametric_umap.html  parametric_umap.md  params_parametric_umap.html  params_parametric_umap.md  params_sc_cagra.html  params_sc_cagra.md  params_sc_ivf.html  params_sc_ivf.md  (+14 more)
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/embeddings/: mod.rs  parametric_umap.rs  utils.rs
src/rust/src/single_cell/: knn_gpu.rs  mod.rs
(+12 files in other folders)
