[package]
name = 'bixverse_gpu'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'bixverse_gpu'

[dependencies]
ann-search-rs = { version = "0.2.8", features = ["gpu"] }
bixverse-rs = "0.1.6"
cubecl = "0.9.0"
extendr-api = '0.8.1'
faer = { version = '0.23.2' }

[profile.dev.package.faer]
opt-level = 3

[profile.test]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
